monitoring/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: monitoring-microservice
  namespace: starlink
  labels:
    app: monitoring-restapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: monitoring-restapp
  template:  
    metadata:
      labels: 
        app: monitoring-restapp
    spec:
      containers:
        - name: monitoring-restapp
          image: 571454663604.dkr.ecr.us-east-2.amazonaws.com/starlink-monitoring-operations:latest
          ports: 
            - containerPort: 8086
