monitoring/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: constellation-restapp-nodeport-service
  namespace: starlink
  labels:
    app: constellation-restapp
spec:
  type: NodePort
  selector:
    app: constellation-restapp
  ports:
    - port: 8087
      targetPort: 8087
