monitoring/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: starlink
  name: starlink-ingress
  annotations:
    # Ingress core annotations
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
    - http:
        paths:
          - path: /MO/*
            backend:
              serviceName: monitoring-restapp-nodeport-service
              servicePort: 8086
          - path: /CO/*
            backend:
              serviceName: constellation-restapp-nodeport-service
              servicePort: 8087
